# xsp-lib

./: .copilot-instructions.md  .gitignore  .phase2-placeholder  .phase3-placeholder  .phase4-placeholder  .pre-commit-config.yaml  2025-12-10_COMPREHENSIVE_ANALYSIS.md  AGENTS.md  ALPHA_READINESS_SUMMARY.md  ARCHITECTURE_DECISION_LOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE3_COMPLETE.md  PHASE_2_ROADMAP.md  PRODUCTION_ALPHA_PLAN.md  QUICKSTART_PHASE3.md  README.md  pyproject.toml
.github/: CONTRIBUTING_PRECOMMIT.md  DEPENDENT_REPO_TEMPLATE.md  NAMING_CONVENTIONS.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUBMODULE_PARENT_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  copilot_task.yml  documentation.yml  feature_request.yml  protocol_implementation.yml
.github/agents/: developer.md  doc-writer.md  orchestrator.md  tester.md
.github/copilot/: mcp.json
.github/hooks/: README.md
.github/triggers/: update-prs-test.txt
.github/workflows/: auto-rebase-pr.yml  batch-resolve-conflicts.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  linting-fixes.yml  pre-commit.yml  rebase-pr-branch.yml  release.yml  update-prs.yml
docs/: adcom.md  architecture-final.md  architecture-protocol-agnostic-design.md  architecture-session-management.md  architecture-terminology.md  architecture.md  configuration.md  index.md  orchestrator.md  phase3-advanced-features.md  quickstart.md
docs/architecture/: .gitkeep  00-final-architecture.md  01-session-management.md  diagrams.md  final-architecture.md  protocol-agnostic-design.md  session-management.md  terminology.md
docs/development/: mcp-examples.md  mcp-integration.md  mcp-quick-reference.md  precommit-quickstart.md
docs/guides/: 01-session-management.md  02-stateful-ad-serving.md  session-management.md  stateful-ad-serving.md
docs/protocols/: vast-chain-resolver.md  vast-parser.md  vast.md
docs/workflows/: README.md  rebase-pr-branch.md
examples/: CONFIG_README.md  adcom_example.py  basic_http.py  budget_tracking.py  config_development.toml  config_example.py  config_production.toml  demo_configurable.py  file_example.py  frequency_capping.py  memory_example.py  orchestrator_example.py  orchestrator_usage.py  orchestrator_vast_example.py  production_vast_example.py  session_management.py  settings.vast.toml  vast_chain_resolution.py  vast_custom_selector.py  vast_example.py
scripts/: README.md  rebase-pr.sh
src/xsp/: __init__.py
src/xsp/cli/: __init__.py  generate_config.py
src/xsp/core/: __init__.py  base.py  config.py  config_generator.py  configurable.py  dialer.py  exceptions.py  protocol.py  session.py  state.py  transport.py  types.py  upstream.py
src/xsp/middleware/: __init__.py  base.py  budget.py  frequency.py  retry.py
src/xsp/orchestrator/: __init__.py  orchestrator.py  protocol.py  schemas.py
src/xsp/protocols/: __init__.py
src/xsp/protocols/openrtb/: __init__.py  handler.py  models.py  types.py  upstream.py
src/xsp/protocols/vast/: __init__.py  cache.py  chain.py  chain_resolver.py  config_loader.py  error_tracker.py  handler.py  macros.py  metrics.py  parser.py  types.py  upstream.py  validation.py
src/xsp/schemas/: __init__.py
src/xsp/standards/: __init__.py
src/xsp/standards/adcom/: __init__.py  context.py  enums.py  media.py  placement.py  types.py  utils.py  validation.py
src/xsp/transports/: __init__.py  file.py  http.py  memory.py
src/xsp/utils/: __init__.py  encoding.py
tests/: README.md  conftest.py  validate_agents.py
tests/e2e/: README.md  __init__.py  test_vast_production_features.py
tests/fixtures/: vast_chains.yaml
tests/fixtures/samples/: sample.json
tests/integration/: test_http_upstream.py  test_orchestration_workflow.py  test_session_management.py  test_vast_chain_integration.py  test_workflow.py
tests/unit/: test_configurable.py  test_core_config.py  test_middleware.py  test_orchestrator.py  test_protocol.py  test_transports.py  test_upstream.py
tests/unit/core/: test_config.py  test_config_generator.py  test_config_generator_validation.py  test_configurable.py  test_session.py  test_state.py
tests/unit/orchestrator/: test_orchestrator.py  test_schemas.py
tests/unit/protocols/: test_vast_chain_resolver.py  test_vast_config.py  test_vast_handler.py  test_vast_macros.py  test_vast_parser.py  test_vast_upstream.py  test_vast_validation.py
tests/unit/protocols/openrtb/: __init__.py  test_handler.py  test_models.py  test_upstream.py
tests/unit/standards/: __init__.py  test_adcom_context.py  test_adcom_enums.py  test_adcom_media.py  test_adcom_placement.py  test_adcom_utils.py  test_adcom_validation.py
tools/refactor_toolkit/: README.md  pyproject.toml
tools/refactor_toolkit/docs/: README.md
tools/refactor_toolkit/src/rope_toolkit/: __init__.py  __main__.py  config.py  engine.py  exceptions.py  types.py
tools/refactor_toolkit/src/rope_toolkit/facades/: __init__.py  lsp_server.py  mcp_server.py
tools/refactor_toolkit/src/rope_toolkit/services/: __init__.py  base.py  graph.py  indexer.py  metrics.py  observation.py  relationship.py
tools/refactor_toolkit/src/rope_toolkit/storage/: __init__.py  base.py  sqlite_.py
