[tool.poetry]
name = "xsp-lib"
version = "0.1.0"
description = "Exchange Protocols Library"
authors = ["AdTech Team"]
readme = "README.md"
packages = [{include = "xsp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.0"
lxml = "^4.9.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.2.0"
pyyaml = "^6.0"
tomlkit = "^0.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
mypy = "^1.7.0"
ruff = "^0.1.6"
black = "^23.11.0"
lxml-stubs = "^0.5.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
