[tool.poetry]
name = "xsp-lib"
version = "0.1.0"
description = "Exchange Protocols Library"
authors = ["AdTech Team"]
readme = "README.md"
packages = [{include = "xsp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.0"
lxml = "^4.9.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.2.0"
pyyaml = "^6.0"
tomlkit = "^0.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
mypy = "^1.7.0"
ruff = "^0.14.8"
lxml-stubs = "^0.5.1"
pre-commit = "^4.0.0"
bandit = {extras = ["toml"], version = "^1.7.10"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "network: tests that require network access",
    "slow: slow running tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
