[project]
name = "xsp-lib"
version = "0.1.0"
description = "Exchange Protocols Library"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "AdTech Team"}
]
keywords = ["exchange", "protocols", "advertising", "vast", "openrtb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.8.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "tomlkit>=0.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.20.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "lxml-stubs>=0.5.1",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "network: tests that require network access",
    "slow: slow running tests",
]
# Test conflict
